--- a/web/themes/custom/breema2/sass/components/_responsive_menu.scss
+++ b/web/themes/custom/breema2/sass/components/_responsive_menu.scss
@@ -134,7 +134,7 @@ html.mm-opened .mm-page {
 
 @media (min-width: 1270px) {
   .horizontal-menu {
-    margin-left: 2em;
+    margin-left: 1em;
   }
 }
 
